Test 2: added CSS flow-root
Trying to see what display: flow-root does.

--- a/main.css
+++ b/main.css
@@ -23,9 +23,10 @@ body {
     margin: 0 auto;
 }
 .clearfix::after {
-    content: "";
+    /* content: "";
     clear: both;
-    display: table;
+    display: table; */
+    display: flow-root;
 }
 h1 {
     color: white;
