--- a/main.css
+++ b/main.css
@@ -22,10 +22,12 @@ body {
     width: 90%;
     margin: 0 auto;
 }
-.clearfix::after {
-    /* content: "";
+/* .clearfix::after {
+    content: "";
     clear: both;
-    display: table; */
+    display: table;
+} */
+.clearFloat {
     display: flow-root;
 }
 h1 {
