--- a/main.css
+++ b/main.css
@@ -63,6 +63,12 @@ nav a img {
 nav a:nth-child(2) {
     float: right;
 }
+nav a:nth-child(3) {
+    float: right;
+}
+nav a:nth-child(4) {
+    float: right;
+}
 
 /*-----header-----*/
 header {
