--- a/main.css
+++ b/main.css
@@ -57,6 +57,24 @@ nav a {
     color: white;
     text-decoration: none;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+  }
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
 nav a img {
     vertical-align: middle;
 }
