--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ nav a:nth-child(5) {
 /*-----header-----*/
 header {
     margin: 100px 0 200px 0;
-    text-align: right;
+    text-align: left;
 }
 header p {
     width: 100%;
