--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -31,7 +31,7 @@
 
 .module-small-home {
   padding: 70px 0;
-  margin: 0 0 100px 0;
+  margin: 100px 0 100px 0;
 }
 
 .work-item:hover .work-image>img {
