--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -9,8 +9,16 @@
     text-align: center;
   } */
 
-.col-sm-12 p {
+/* .col-sm-12 p {
   font-size: 16px;
+} */
+
+.aboutMeText {
+  font-size: 16px;
+}
+
+.aboutMeImage {
+  min-height: 300px;
 }
 
 .pt-30 {
