--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -40,23 +40,40 @@
   font-size: 20px;
 }
 
-.module-small-home {
+/* .module-small-home {
   position: relative;
   padding: 140px 0;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+} */
+
+.module-small {
+  margin-top: 140px;
 }
 
-.module-small-home {
-  padding: 70px 0;
-  margin: 100px 0 100px 0;
+.module {
+  padding-bottom: 0px;
 }
 
 .work-item:hover .work-image>img {
   -webkit-transform: scale(1.1) rotate(0deg);
   -ms-transform: scale(1.1) rotate(0deg);
   transform: scale(1.1) rotate(0deg);
+}
+
+.work-caption p {
+  color: black;
+  font-size: 14px;
+}
+
+.work-caption h3 {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.work-descr {
+  font-size: 14px;
 }
 
 .container {
