--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ a,
   height: 100%;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: 100%;
+  background-size: cover;
 }
 
 .side-image-text {
